--- a/profileManagement.html
+++ b/profileManagement.html
@@ -13,19 +13,19 @@
       <form id="profileManagementForm">
         <p>
           <label for="">Full Name</label>
-          <input type="text" required />
+          <input type="text" maxlength="50" required />
         </p>
         <p>
           <label for="">Address 1</label>
-          <input type="text" required />
+          <input type="text" maxlength="100" required />
         </p>
         <p>
           <label for="">Address 2</label>
-          <input type="text" />
+          <input type="text" maxlength="100" />
         </p>
         <p>
           <label for="">City</label>
-          <input type="text" required />
+          <input type="text" maxlength="100" required />
         </p>
         <p>
           <label for="">State</label>
@@ -86,7 +86,7 @@
         </p>
         <p>
           <label for="">Zipcode</label>
-          <input type="number" required />
+          <input type="number" maxlength="9" minlength="5" required />
         </p>
         <input id="submitButton" type="submit" />
       </form>
