--- a/fuelQuoteForm.html
+++ b/fuelQuoteForm.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="fuelQuoteForm.css" />
   </head>
   <body>
+    <a href=mainmenu.html style="text-decoration: none; color:black; font-size: 12px; ">Back to Main Menu</a>
     <div id="formBox">
       <h1 id="formHeader">Fuel Quote Form</h1>
       <form id="fuelQuoteForm">
