--- a/history.html
+++ b/history.html
@@ -1,11 +1,38 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>History</title>
-    </head>
-    
-    <body>
-        <p>Database will go here</p>
         
+        <title>Fuel Quote History</title>
+        <link rel="stylesheet" href="history.css">
+    </head>
+
+    <body>
+        <a href=mainmenu.html style="text-decoration: none; color:black; font-size: 12px; ">Back to Main Menu</a>
+        <div id="formBox">
+            <h1 id="formHeader">Fuel Quote History</h1>
+                <table id="table">
+                    <tr>
+                        <th>Number of Gallons Requested</th>
+                        <th>Delivery Address</th>
+                        <th>Delievery Date (MM-DD-YYYY)</th>
+                        <th>Suggested Price / gallon (USD)</th>
+                        <th>Total Amount Due (USD)</th> 
+                    </tr>
+                    <tr>
+                        <th>12</th>
+                        <th>123 Smith Street</th>
+                        <th>10-25-2021</th>
+                        <th>432</th>
+                        <th>350</th>
+                    </tr>
+                    <tr>
+                        <th>28</th>
+                        <th>456 Flash Lane</th>
+                        <th>2-16-2022</th>
+                        <th>512</th>
+                        <th>600</th>
+                    </tr>
+                </table>
+        </div>
     </body>
 </html>
