--- a/profileManagement.html
+++ b/profileManagement.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="profileManagement.css" />
   </head>
   <body>
+    <a href=mainmenu.html style="text-decoration: none; color:black; font-size: 12px; ">Back to Main Menu</a>
     <div id="formBox">
       <h1 id="formHeader">Profile Management</h1>
       <form id="profileManagementForm">
